--- a/package.json
+++ b/package.json
@@ -1,5 +1,27 @@
 {
   "devDependencies": {
-    "@types/node": "^17.0.21"
+    "@types/node": "^17.0.21",
+    "@types/underscore": "^1.11.4"
+  },
+  "name": "nodewithtypescript",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joeamerson/NodeWithTypescript.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/joeamerson/NodeWithTypescript/issues"
+  },
+  "homepage": "https://github.com/joeamerson/NodeWithTypescript#readme",
+  "description": "",
+  "dependencies": {
+    "mongoose": "^6.2.6",
+    "underscore": "^1.13.2"
   }
 }
