--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "@types/underscore": "^1.11.4"
   },
@@ -21,6 +22,8 @@
   "homepage": "https://github.com/joeamerson/NodeWithTypescript#readme",
   "description": "",
   "dependencies": {
+    "express": "^4.17.3",
+    "joi": "^17.6.0",
     "mongoose": "^6.2.6",
     "underscore": "^1.13.2"
   }
